changed copy to reflect that it's all one course. Removed authentication from advanced.

--- a/app/templates/gemconf/training.hbs
+++ b/app/templates/gemconf/training.hbs
@@ -9,12 +9,12 @@
       image="https://embermeetup.com/wp-content/uploads/training.svg"
     }}
       <h2>Live training at GEMconf</h2>
-      <h3>We are offering 2 training courses as part of GEMconf Triangle, Fundamentals & Advanced.</h3>
+      <h3>We are offering a 2 day training course as part of GEMconf Triangle, covering both fundamental & advanced topics.</h3>
       <p>        
         Whether you're looking for a solid understanding of all the fundamentals needed to be an effective 
         Ember developer, or looking to dive deeper into the issues that face developers of larger, more 
-        complex Ember apps, we've got you covered. Both are intensive learning experiences, aiming to 
-        accelerate your career by ensuring a complete understanding of the topics covered.
+        complex Ember apps, we've got you covered. This is an intensive learning experience, aiming to 
+        accelerate your career by ensuring a complete awareness of the skills and experience required to build ambitious web applications.
       </p>
       <p>
         We believe learning happens best when supported by connections to others in the community. 
@@ -51,7 +51,7 @@
             <a class="button red-button" href={{model.eventbrite}}>Participate in the Research Triangle - $1099</a>
           </p>
           <p>
-            This course is designed to give the learner an in-depth understanding of all the 
+            This day is designed to give the learner an in-depth understanding of all the 
             fundamentals needed to build a complex Ember app. It includes access to pre-recorded 
             videos and a live, hands-on and project-based workshop.
           </p>
@@ -80,7 +80,7 @@
               <li>Ember-cli</li>
             </ul>
             <p>
-              Our pre-course videos are tightly edited and concise, aiming to give you the knowledge you need, in the minimum amount of time. We use both live video and screen capture of Chase and Jon explaining the context and concepts you’ll need to be comfortable with in class. Through slides, diagrams and demos, you’ll have the background needed before jumping into our workshop project.
+              Our videos are tightly edited and concise, aiming to give you the knowledge you need, in the minimum amount of time. We use both live video and screen capture of Chase and Jon explaining the context and concepts you’ll need to be comfortable with in class. Through slides, diagrams and demos, you’ll have the background needed before jumping into our workshop project with the rest of the group.
             </p>
             <h5>In-person and Online Workshop</h5>
               <p>
@@ -99,12 +99,6 @@
                 <li>create a service to handle user/session authentication</li>
                 <li>evaluate considerations for deployment</li>
               </ul>
-              <p>
-                Remote learners will see the instructor’s screen and have a crisp audio feed of what’s being said. There will be a Slack room for group chat and a system for 2 way voice communication so we can hear your questions too!
-              </p>
-              <p>
-                Along the way, you’ll hear stories from Chase and Jonathan about working on the front lines of a busy consulting shop and get to ask them about issues specific to your projects! 
-              </p>
         </div>
 
         <div id="day-2">
@@ -115,10 +109,10 @@
             <a class="button red-button" href={{model.eventbrite}}>Participate in the Research Triangle - $1099</a>
           </p>
           <p>
-            Attendance of Day 1 is not required, but we recommended you ensure you have a good understanding of how to do all of the things we cover in the Fundamentals course.
+            Attendance of Day 1 is not required, but we recommended you ensure you have a good understanding of how to do all of the things we cover in the Fundamentals section.
           </p>
           <p>
-            In the Advanced workshop, we'll build on the foundation of the app we created in Day 1 and dive deeper into topics that arise as your app gets larger and more feature complete, such as adding user authentication, how to interact with APIs and persist that data to various backends, how to deal with realtime scenarios, and best practices to keep your code organized, maintainable and tested. 
+            In the Advanced workshop, we'll build on the foundation of the app we created in Day 1 and dive deeper into topics that arise as your app gets larger and more feature complete, such as adding test coverage, interacting with various APIs and persisting that data to various backends, how to deal with realtime scenarios, and best practices to keep your code organized, clean and maintainable as your project grows. 
           </p>
           <h4>What You'll Learn:</h4>
             <dl>
@@ -129,14 +123,6 @@
                   <li>Page Objects</li>
                   <li>Integration tests (components)</li>
                   <li>Unit tests (helpers, routes, services)</li>
-                </ul>
-              </dd>
-              <dt>Authentication using Torii and Ember-Simple-Auth</dt>
-              <dd>
-                <ul>
-                  <li>Account creation</li>
-                  <li>Account update</li>
-                  <li>OAuth sign in</li>
                 </ul>
               </dd>
               <dt>APIs and EmberCLI Mirage</dt>
@@ -159,6 +145,12 @@
               <dt>Deployment</dt>
               <dd>Deploy your Ember apps easily and confidently with <a href="https://ember-cli.com/ember-cli-deploy/">ember-cli-deploy</a>.</dd>          
             </dl>
+            <p>
+              Remote learners will see the instructor’s screen and have a crisp audio feed of what’s being said. There will be a Slack room for group chat and a system for 2 way voice communication so we can hear your questions too!
+            </p>
+            <p>
+              Along the way, you’ll hear stories from Chase and Jonathan about working on the front lines of a busy consulting shop and get to ask them about issues specific to your projects! 
+            </p>
         </div>
 
     {{/box-content}}
