I addded the code of conduct (new route and info on the page to link to it). also added banners on the show.hbs page for gemconf and the training. i dont know how to get rid of space in between without introducing more css and cant figure out how to change the text color on the training button. anyways!!!!!!!! take it home taras!

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -57,3 +57,11 @@ a {
 .no-top-margin {
   margin-top: 0;
 }
+
+.padding-left {
+  padding-left: 15px;
+}
+
+.color {
+  background-color: skyBlue;
+}
