--- a/app/templates/gemconf/index.hbs
+++ b/app/templates/gemconf/index.hbs
@@ -169,3 +169,8 @@
   <a href="mailto:t@embersherpa.com?Subject=Sponsor%20GEMconf" class="button red-button">Sponsor</a>
 
 {{/box-callout}}
+
+{{#box-content}}
+<h2>Code of Conduct</h2>
+<p>Please read our {{link-to 'Code of Conduct' 'gemconf.code-of-conduct'}} before purchasing a ticket.</p>
+{{/box-content}}
