--- a/app/templates/show.hbs
+++ b/app/templates/show.hbs
@@ -5,11 +5,34 @@
 }}
 {{scroll-to position=0}}
 
+{{#box-callout backgroundColor='red' class="padding-left"}}
+  <h2>August 12th - Triangle GEMconf</h2>
+  <p>
+     Join us in Raleigh/Durham 8/12-8/16 for community focused discussions, talks, and training. Online and in person options available.
+  </p>
+  <p class="button color">
+    {{link-to 'Registration' 'gemconf'}}
+  </p>
+{{/box-callout}}
+
+{{#box-callout backgroundColor='sky' class="padding-left"}}
+  <h2>2 Day Ember.js Training with EmberWeekend (8/15-8/16)</h2>
+  <p>
+    Whether you're looking for a solid understanding of all the fundamentals needed to be an effective
+    Ember developer, or looking to dive deeper into the issues that face developers of larger, more
+    complex Ember apps, we've got you covered in this 2 day workshop.
+  </p>
+  <p class="button red-button">
+    {{link-to 'More Info' 'gemconf.training'}}
+  </p>
+{{/box-callout}}
+
 <div class="episodes-page">
+
   <h1 class="episodes-page--title">Season {{season}}</h1>
-  
+
   {{#each model as |episode|}}
     {{episode-strip episode=episode}}
   {{/each}}
-  
+
 </div>
