Renamed the css classes

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -58,10 +58,6 @@ a {
   margin-top: 0;
 }
 
-.padding-left {
+.padding-left-15px {
   padding-left: 15px;
-}
-
-.color {
-  background-color: skyBlue;
 }
