--- a/app/templates/show.hbs
+++ b/app/templates/show.hbs
@@ -10,12 +10,12 @@
   <p>
      Join us in Raleigh/Durham 8/12-8/16 for community focused discussions, talks, and training. Online and in person options available.
   </p>
-  <p class="button color">
+  <p class="button sky-blue-background">
     {{link-to 'Registration' 'gemconf'}}
   </p>
 {{/box-callout}}
 
-{{#box-callout backgroundColor='sky' class="padding-left"}}
+{{#box-callout backgroundColor='sky' class="padding-left-15px"}}
   <h2>2 Day Ember.js Training with EmberWeekend (8/15-8/16)</h2>
   <p>
     Whether you're looking for a solid understanding of all the fundamentals needed to be an effective
