Tweaked The Ember Show info sections

--- a/app/styles/_colors.scss
+++ b/app/styles/_colors.scss
@@ -34,6 +34,10 @@ $base-font-color: $dark-gray;
   color: $dark-gray;
 }
 
+.white {
+  color: white;
+}
+
 .sky-blue-background {
   background-color: skyBlue;
 }
