Fixed a spelling mistake

--- a/app/templates/show.hbs
+++ b/app/templates/show.hbs
@@ -21,7 +21,7 @@
       title="EmberWeekend Training at GEMconf Triangle (Aug 15-16th)"  
     }}
       <p>
-        Gain solid understanding of all Ember.js fundamentals and build an 
+        Gain solid understanding of all Ember.js fundamentals and build a 
         realistic application during EmberWeekend training workshop. 
       </p>
       {{link-to 'More Info' 'gemconf.training' classNames="button red-button"}}    
