--- a/app/templates/show.hbs
+++ b/app/templates/show.hbs
@@ -1,7 +1,8 @@
 {{head-data
   title="The Ember Show"
-  classNames="the-ember-show"
-  heroImage="/assets/images/The-Ember-Show-Header.svg"
+  heroTitle="The Ember Show"
+  classNames="the-ember-show hero-style"
+  withHero=true
 }}
 {{scroll-to position=0}}
 
