--- a/app/styles/pages/_conference.scss
+++ b/app/styles/pages/_conference.scss
@@ -2,9 +2,9 @@ header.gemconf {
   background: url(images/Global-Meetup-Header-Triangle-Final.svg) $skyBlue no-repeat center;
   height: 658px;
   
-  h1 {
+  .hero-title {
     color: $darkerBlue;
-    margin: 0;
+    padding-top: 80px;    
   }
   
   .hero-sub-title, .call-to-action {
@@ -19,7 +19,7 @@ header.gemconf {
   }
   
   @include media($mobile) {
-    h1 {
+    .hero-title {
       font-size: 64px;
       top: 100px;
     }
@@ -34,7 +34,7 @@ header.gemconf {
   }
   
   @include media($tablet) {
-    h1 {
+    .hero-title {
       font-size: 86px;
       top: 80px;
     }
