--- a/app/templates/components/nav-header.hbs
+++ b/app/templates/components/nav-header.hbs
@@ -1,8 +1,8 @@
 {{#if withHero}}
   {{link-to '' 'index' classNames="go-home" title="Go home"}}
-  <h1 class="font-bree-semibold">{{or headData.heroTitle headData.title}}</h1>
+  <span class="hero-title">{{headData.heroTitle}}</span>
   {{#if headData.heroSubTitle}}
-    <span class="font-bree-semibold hero-sub-title">{{headData.heroSubTitle}}</span>
+    <span class="hero-sub-title">{{headData.heroSubTitle}}</span>
   {{/if}}
   {{#if withButton}}
     <div class="call-to-action">
