Added rock-and-roll ember banner

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -20,6 +20,7 @@ $base-separator: 1px solid transparentize($dark-gray, 0.9);
 @import 'pages/_show';
 @import 'pages/_tools';
 @import 'pages/_newsletter';
+@import 'pages/_rock-and-roll-ember';
 
 @import 'components/_nav-header';
 @import 'components/_box-content';
