--- a/app/templates/gemconf/index.hbs
+++ b/app/templates/gemconf/index.hbs
@@ -96,9 +96,8 @@
 
       {{/box-content}}
 
-
-
     {{#box-callout
+      classNames="img-size-150px"
       image="https://embermeetup.com/wp-content/uploads/2016/04/microphone.svg" position="right" backgroundColor="red"
     }}
       <h2>Lightning talks</h2>
@@ -152,10 +151,6 @@
     </article>
 
   </main>
-
-{{#box-callout backgroundColor="sky" class="gemconf-sponsors"}}
-
-{{/box-callout}}
 
 {{#box-callout class="gemconf-sponsors"}}
   <h2>Sponsors</h2>
