--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -42,6 +42,10 @@ a {
   text-decoration: none;
 }
 
+.clearfix {
+  @include clearfix;
+}
+
 .max-width {
   max-width: $maxWidth;
 }
@@ -65,4 +69,38 @@ a {
 
 .padding-30px {
   padding: 30px;
+}
+
+.padding-60px {
+  padding: 60px;
+}
+
+.center {
+  text-align: center;
+}
+
+.margin-left-right-30px {
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+.margin-bottom-30px {
+  margin-bottom: 30px;
+}
+
+.margin-bottom-60px {
+  margin-bottom: 60px;
+}
+
+.margin-top-60px {
+  margin-top: 60px;
+}
+
+.margin-right-30px {
+  margin-right: 30px;
+}
+
+hr.red-line {
+  border-top: 2px solid $red;
+  width: 90%;
 }
