--- a/app/styles/pages/_rock-and-roll-ember.scss
+++ b/app/styles/pages/_rock-and-roll-ember.scss
@@ -22,3 +22,75 @@ header.rock-and-roll-ember {
     font-weight: 100;
   }
 }
+
+section.rock-and-roll-ember {
+
+  .line-height-64px {
+    line-height: 64px;
+  }
+
+  .img-padding-top-10px {
+    .box-callout--img-right {
+      padding-top: 10px;    
+    }
+  }
+  
+  .content-padding-top-15px {
+    .box-callout--content {
+      padding-top: 15px;
+    }
+  }
+  
+  .float-right {
+    float: right;
+  }
+
+  .video-list {
+    li {
+      list-style: none;
+      background: url(images/RARE-film.png) left center no-repeat;
+      padding: 5px 0px 5px 60px;
+      margin-bottom: 5px;
+    }
+  }
+
+  .smaller-font {
+    font-weight: 100;
+    font-size: 80%;
+  }
+
+  .rare-lightning-background {
+    background: url(images/RARE-lightning-background.svg) center no-repeat $skyBlue;
+    
+    .box-content--content {
+      padding: 30px 0;
+      text-align: center;
+    }
+
+    p {
+      font-size: 120%;      
+    }
+  }
+
+  .two-columns {
+    @include outer-container(100%);
+
+    .column {
+      text-align: center;
+      h3 {
+        text-align: center;
+        font-weight: 100;
+      }
+      img {
+        max-height: 300px;
+      }
+      @include media($mobile) {
+        @include span-columns(12);
+      }
+      @include media($tablet) {
+        @include span-columns(6);
+      }
+    }
+  }
+
+}
