--- a/app/templates/rock-and-roll-ember.hbs
+++ b/app/templates/rock-and-roll-ember.hbs
@@ -7,6 +7,144 @@
 }}
 {{scroll-to position=0}}
 
-<div>
-asdfasdf
-</div>
+<section class="max-width auto-margin rock-and-roll-ember">
+
+  {{#box-content classNames="center margin-left-right-30px margin-bottom-60px"}}
+    <h2 class="margin-bottom-60px margin-top-60px">
+      Learn to implement authentication from Balint Erdi,<br>
+      the author of <i>Rock and Roll with Ember</i>, and EmberSherpa.
+    </h2>
+
+    <p class="margin-bottom-60px">
+      This complete introduction to authentication will tell you everything you need to know to implement 
+      <strong>Username / Password</strong> and <strong>oAuth 2.0</strong> authentication scenarios. 
+      This training will consist of pre-recorded videos, a live hands-on workshop and take home practice exercises.
+    </p>
+
+    <hr class="red-line">
+  {{/box-content}}
+
+  {{#box-content
+    classNames="margin-bottom-60px margin-left-right-30px"
+    image="https://embermeetup.com/wp-content/uploads/RARE-Cap.png"
+  }}
+    <h2>Personalized Learning System</h2>
+    <p>
+      The path to understanding is different for everyone. Nobody shares the exact same experiences and past time 
+      spent practicing on certain topics. Our system is completely student focussed, allowing the learner to take 
+      part in their own choose-your-own-adventure, but instead of dragons and space pirates, it’s syntax and frameworks.
+    </p>
+  {{/box-content}}
+
+  {{#box-callout
+    classNames="img-padding-top-10px content-padding-top-15px"
+    image="https://embermeetup.com/wp-content/uploads/RARE-Gabby.svg" 
+    position="right" 
+    backgroundColor="red"
+  }}
+    <h2 class="padding-30px line-height-64px center">
+      Our system is completely student focussed,<br>
+      allowing the learner to take part in their own choose-your-own-adventure.
+    </h2>
+  {{/box-callout}}
+
+  {{#box-content
+    classNames="margin-left-right-30px"
+    image="https://embermeetup.com/wp-content/uploads/RARE-Player.png"
+  }}
+  <h2>Pre-Recorded Videos <span class="float-right smaller-font margin-right-30px">August 11th</span></h2>
+  <p>
+    You will receive access to pre-recorded videos 7 days before the workshop. <br>
+    These videos will cover the following topics:
+  </p>
+  <ul class="video-list">
+    <li>Introduction to authentication and authorization</li>
+    <li>Authentication options</li>
+    <li>Traditional username and a password authentication</li>
+    <li>Introduction to OAuth 2.0</li>
+    <li>Introduction to ember-simple-auth</li>
+    <li>Introduction to Torii</li>
+  </ul>
+  {{/box-content}}
+
+  {{#box-content classNames="margin-bottom-60px margin-left-right-30px"}}
+    <p>
+      As you view them, as fast or as slow as YOU want, you write down your questions as they pop into your head. 
+      During the week prior to the workshop, as your subconscious mind continues to work, write down all of the 
+      questions that occur during your time in the shower, or while washing the dishes. We will collect all of 
+      these questions before the workshop to allow our instructor to dive right into the details that are relevant to the group.
+    </p>
+  {{/box-content}}
+
+  {{#box-callout
+    classNames="img-padding-top-10px content-padding-top-15px"
+    image="https://embermeetup.com/wp-content/uploads/RARE-key.png" 
+    position="right" 
+    backgroundColor="red"
+  }}
+    <h2 class="padding-30px line-height-64px center">
+      Our videos are tightly edited and offer a deep dive <br>into all of the fundamentals of authentication.
+    </h2>
+  {{/box-callout}}
+
+  {{#box-content
+    classNames="margin-left-right-30px margin-bottom-60px"
+    image="https://embermeetup.com/wp-content/uploads/RARE-Monitor.png"
+  }}
+    <h2 class="clearfix">Online Workshop <span class="float-right smaller-font margin-right-30px">August 18th<br>12pm - 4pm EST</span></h2>
+    <p>
+      In the online workshop we will spend ALL of our time working on a project. 
+      Learners will add authentication to an existing application. The goal of 
+      this workshop is for you to gain first hand experience implementing authentication. 
+      You will have an opportunity to see real code and have your questions answered.
+    </p>
+  {{/box-content}}
+
+  {{#box-content
+    classNames="margin-bottom-60px rare-lightning-background"
+  }}
+    <p>
+      Our workshop is open to a <span class="red">LIMITED</span> number of seats in order to <br>
+      guarantee a 4:1 ratio of students to instructors & mentors. <br>
+      2-way voice interaction with instructor or just chat?
+    </p>
+  {{/box-content}}
+
+  {{#box-content
+    classNames="margin-left-right-30px margin-bottom-60px"
+    image="https://embermeetup.com/wp-content/uploads/RARE-notebook.png"
+  }}
+    <h2 class="clearfix">Take Home Exercises <span class="float-right smaller-font margin-right-30px">August 18 - 25th</span></h2>
+    <p>
+      You will receive a set of exercises that will give you an opportunity to add authentication 
+      to Rock and Roll Ember application. We will provide access to a private Slack channel where 
+      you can discuss the challenges with other participants. You can’t always force learning to 
+      occur – time spent working and struggling on the problem can often give you a much better 
+      context for understanding the solution.
+    </p>
+  {{/box-content}}
+
+  <hr class="red-line margin-bottom-60px">
+
+  {{#box-content
+    classNames="margin-left-right-30px margin-bottom-60px"
+  }}
+    <h2 class="center margin-bottom-30px">Your Instructors</h2>
+
+    <div class="two-columns">
+      <div class="column margin-bottom-30px">
+        <img src="https://embermeetup.com/wp-content/uploads/RARE-Balint.png" alt="Balint Erdi's portrait"/>
+        <h3>Balint Erdi</h3>
+        <p>Balint helped thousands of people become Ember developers with the <i>Rock and Roll with Ember</i> book.</p>
+      </div>
+      <div class="column margin-bottom-30px">
+        <img src="https://embermeetup.com/wp-content/uploads/RARE-EmberSherpa.png" alt="Taras' portrait"/>
+        <h3>Taras Mankovski<br> (aka EmberSherpa)</h3>
+        <p>Taras spent the last 3 years helping people learn Ember.</p>
+      </div>
+    </div>
+
+  {{/box-content}}
+
+
+</section>
