--- a/app/templates/rock-and-roll-ember.hbs
+++ b/app/templates/rock-and-roll-ember.hbs
@@ -77,7 +77,7 @@
   {{/box-content}}
 
   {{#box-callout
-    classNames="img-padding-top-10px content-padding-top-15px"
+    classNames="img-padding-top-10px img-max-height-150px"
     image="https://embermeetup.com/wp-content/uploads/RARE-key.png" 
     position="right" 
     backgroundColor="red"
@@ -145,5 +145,42 @@
     </div>
   {{/box-content}}
 
+  {{#box-callout
+    classNames="img-padding-top-10px img-max-height-150px padding-30px"
+    image="https://embermeetup.com/wp-content/uploads/RARE-calendar.png" 
+    position="right" 
+    backgroundColor="sky"
+  }}
+    <h2>Schedule</h2>
+    
+    <dl class="date-list">
+      <dt><i class="fa fa-calendar-o" aria-hidden="true"></i> August 11th</dt><dd>Access to pre-recorded videos</dd><br>
+      <dt><i class="fa fa-calendar-o" aria-hidden="true"></i> August 18th</dt><dd>12pm - 4pm EST - Online Workshop</dd><br>
+      <dt><i class="fa fa-calendar-o" aria-hidden="true"></i> August 18th - 25th</dt><dd>Take Home Exercises</dd><br>
+    </dl>
+  {{/box-callout}}
+
+ {{#box-content
+    classNames="margin-left-right-30px margin-bottom-60px"
+    image="https://embermeetup.com/wp-content/uploads/RARE-trees.png"
+  }}
+    <h2>Evergreen Videos</h2>
+    <p>
+      When you participate in this workshop, you will receive access to updated version of these videos for up to 1 year. 
+      It’s a great way to keep up to date on the developments of Ember’s authentication story.
+    </p>
+  {{/box-content}}
+
+  <hr class="red-line margin-bottom-60px">
+
+  {{#box-content
+    classNames="margin-bottom-60px rare-lightning-background content-max-width-600px"
+  }}
+    <h2>Prerequisites</h2>
+    <p>
+      This course will build on your understanding of Ember.js and common Ember.js development toolset. 
+      You must be comfortable with content that’s covered in Ember Guides and have working familiarity with EmberCLI and Git.
+    </p>
+  {{/box-content}}
 
 </section>
